--- a/.classpath
+++ b/.classpath
@@ -2,15 +2,11 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="lib" path="C:/Users/YashP/wpilib/java/current/lib/cscore.jar"/>
-	<classpathentry kind="lib" path="C:/Users/YashP/wpilib/java/current/lib/cscore-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/YashP/wpilib/java/current/lib/ntcore.jar"/>
-	<classpathentry kind="lib" path="C:/Users/YashP/wpilib/java/current/lib/ntcore-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/YashP/wpilib/java/current/lib/opencv.jar"/>
-	<classpathentry kind="lib" path="C:/Users/YashP/wpilib/java/current/lib/opencv-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/YashP/wpilib/java/current/lib/WPILib.jar"/>
-	<classpathentry kind="lib" path="C:/Users/YashP/wpilib/java/current/lib/WPILib-sources.jar"/>
-	<classpathentry kind="lib" path="C:/Users/YashP/wpilib/java/current/lib/wpiutil.jar"/>
-	<classpathentry kind="lib" path="C:/Users/YashP/wpilib/java/current/lib/wpiutil-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/MVRobotics/wpilib/user/java/lib/CTRE_Phoenix.jar"/>
+	<classpathentry kind="lib" path="C:/Users/MVRobotics/wpilib/java/current/lib/cscore.jar"/>
+	<classpathentry kind="lib" path="C:/Users/MVRobotics/wpilib/java/current/lib/ntcore.jar"/>
+	<classpathentry kind="lib" path="C:/Users/MVRobotics/wpilib/java/current/lib/opencv.jar"/>
+	<classpathentry kind="lib" path="C:/Users/MVRobotics/wpilib/java/current/lib/WPILib.jar" sourcepath="C:/Users/MVRobotics/wpilib/java/current/lib/WPILib-sources.jar"/>
+	<classpathentry kind="lib" path="C:/Users/MVRobotics/wpilib/java/current/lib/wpiutil.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
